Fixed some styling to avoid unnecessary scrollbars

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 .root {
     display: flex;
-    min-width: 100vw;
+    min-width: 100%;
 }
 
 .main-content {
